--- a/index.css
+++ b/index.css
@@ -32,6 +32,12 @@ body
    width: 100%;
    height: 100%;
 }
+
+#sensor1{
+			font-size: 50px;
+			margin: 0px;
+			color: #00979C;
+		}
 #Image1
 {
    border: 0px #000000 solid;
